fix problem with stack size on ios

--- a/src/client/views/components/Layout.scss
+++ b/src/client/views/components/Layout.scss
@@ -56,6 +56,7 @@
   background-color: $shadeColor;
   overflow-y: auto;
   box-shadow: 0px 0px 8px 4px $darkColor;
+  opacity:0.96;
 }
 
 .menu_item {
